2006-12-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: fixed some gaps in 
	text-mode quoting for bottles

	* src/libYARP_OS/src/Vector.cpp: fixed constructor bug #1601862

2006-12-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig: Lots of small improvements - hopefully I 
	didn't break anything

2006-12-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: device library is now
	compiled by default - but specific devices are not built
	in unless specifically asked for.  From a user's perspective,
	not much has changed, but now downstream users can rely
	on libYARP_dev and yarpdev existing.

2006-12-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: updated to remove a new function clash

	* example/swig/FindJNI.cmake: updated by Assif to work on
	Ubuntu.

	* conf/FindPortAudio.cmake: contribution from Hatice to get 
	portaudio driver working under Windows

2006-11-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/dimax_u2c: driver contributed by 
	Assif Mirza

	* example/dev/fake_motor.cpp,simple_motor_client.cpp: examples
	to help with developing new motor control devices
	* src/libYARP_OS/src/Companion.cpp: added some more troubleshooting
	information to "yarp check"

2006-11-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* Several OSX fixes added -- the usual small problems related to
	ace header file order
	
	* src/libYARP_OS/include/yarp/os/NetInt32.h: added operator++ and
	operator-- to big-endian implementation of NetInt32 (for OSX PPC).
	
	* automake Makefile.am files updated using scripts/update-automake.  
	This fixed bug #1601656.
	
	* src/libYARP_OS/src/Terminator.cpp: added unregister for
	fake "quit" port, fixing bug #1595763.
	
	* conf/YarpDevice.cmake, conf/yarpdev.cpp.in, 
	conf/yarpdev_helper.cpp.in: began to develop better support for
	device compilation outside of libYARP_dev.
	